feat(transactions): make transaction creation idempotent (#185)
